vlib/v/checker/tests/option_return_call_non_opt_err.vv
interface IFoo {
	age ?int
	get(param ?int) ?int
}

struct Foo {
	age ?int
}

fn (f Foo) get(param ?int) ?int {
	return param or { f.get(1) }
}

foo := IFoo(Foo{
	age: 100
})
println(foo.get(100))
